# FalloutNV_hacking_assistant

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  saved_words.json  style.css
.github/workflows/: gh-pages-deploy.yml
mockup/: goal.html  style.css
src/: app.rs  lib.rs  main.rs  serialization.rs
