[workspace]


[package]
name = "fallout_hacking_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0.0"

#Json dependencies
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0"

#Leptos front end dependencies
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.8", features = ["csr"] }
stylance = "0.5.5"
